--- a/EventsProject/src/main/resources/application.yaml
+++ b/EventsProject/src/main/resources/application.yaml
@@ -16,7 +16,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     password: AlexNikola1!
     username: root
-    url: jdbc:mysql://localhost:3306/news?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/events?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
 logging:
   level:
     org:
