--- a/EventsProject/build.gradle
+++ b/EventsProject/build.gradle
@@ -30,17 +30,22 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
+	// https://mvnrepository.com/artifact/org.modelmapper/modelmapper
+	implementation 'org.modelmapper:modelmapper:3.2.0'
+
 	implementation 'com.buttercms:buttercmsclient:1.6'
-	// https://mvnrepository.com/artifact/javax.servlet/jstl
-	implementation 'javax.servlet:jstl:1.2'
-	// https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-jasper
-	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:11.0.2'
 	implementation 'io.github.cdimascio:dotenv-java:2.2.0'
+
 	compileOnly 'org.projectlombok:lombok'
+
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
